--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
     margin-top: 30px;
     margin-left: 100px;
     margin-right: 100px;
+    /* display: flex; */
 }
 
 .navbar{
@@ -43,7 +44,7 @@
     border-radius: 50%;
 }
 span{
-    /* color: #1B1A1A ; */
+    color: #1B1A1A ;
 }
 
 .text{
@@ -66,4 +67,15 @@ span{
     box-shadow: none;
    
    
+}
+
+.foods{
+    display: flex;
+    /* margin: 10px;  */
+}
+
+#img2{
+    width: 200px;
+    margin: 10px;
+    border-radius: 30px;
 }
